# project/pay/src/main/java/ru/abramov/practicum/pay/api/BalanceApiController.java
@@ -8,6 +8,7 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.server.ServerWebExchange;
 import reactor.core.publisher.Mono;
 import ru.abramov.practicum.pay.handler.AccountHandler;
+import ru.abramov.practicum.pay.model.BalanceRequest;
 import ru.abramov.practicum.pay.model.BalanceResponse;
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-05-08T15:44:49.285739+03:00[Europe/Moscow]", comments = "Generator version: 7.12.0")
@@ -18,13 +19,13 @@ public class BalanceApiController implements BalanceApi {
     private final AccountHandler accountHandler;
 
     @Override
-    public Mono<ResponseEntity<BalanceResponse>> balanceGet(ServerWebExchange exchange) {
-        return accountHandler.getBalance()
+    public Mono<ResponseEntity<BalanceResponse>> balanceGet(Mono<BalanceRequest> balanceRequest, ServerWebExchange exchange) {
+        return balanceRequest.flatMap(request -> accountHandler.getBalance(request.getUserId())
                 .map(balance -> {
                     BalanceResponse balanceResponse = new BalanceResponse();
                     balanceResponse.setBalance(balance);
 
                     return ResponseEntity.ok(balanceResponse);
-                });
+                }));
     }
 }
