# project/pay/src/main/java/ru/abramov/practicum/pay/model/BalanceRequest.java
@@ -1,47 +1,27 @@
 package ru.abramov.practicum.pay.model;
 
-import jakarta.validation.constraints.DecimalMin;
-import jakarta.validation.constraints.NotNull;
-import java.math.BigDecimal;
-import java.util.Objects;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import io.swagger.v3.oas.annotations.media.Schema;
-
 import jakarta.annotation.Generated;
+import jakarta.validation.constraints.DecimalMin;
+import jakarta.validation.constraints.NotNull;
+
+import java.math.BigDecimal;
+import java.util.Objects;
 
 /**
- * PaymentRequest
+ * BalanceRequest
  */
 
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-05-08T15:44:49.285739+03:00[Europe/Moscow]", comments = "Generator version: 7.12.0")
-public class PaymentRequest {
-
-  @NotNull(message = "Amount is required")
-  @DecimalMin(value = "0.01", message = "Amount must be greater than 0")
-  private BigDecimal amount;
+public class BalanceRequest {
 
   @NotNull(message = "UserId is required")
   private String userId;
 
-  public PaymentRequest amount(BigDecimal amount) {
-    this.amount = amount;
-    return this;
-  }
-
-  public PaymentRequest userId(String userId) {
+  public BalanceRequest userId(String userId) {
     this.userId = userId;
     return this;
-  }
-
-  /**
-   * Get amount
-   * @return amount
-   */
-  
-  @Schema(name = "amount", requiredMode = Schema.RequiredMode.REQUIRED)
-  @JsonProperty("amount")
-  public BigDecimal getAmount() {
-    return amount;
   }
 
   /**
@@ -53,10 +33,6 @@ public class PaymentRequest {
   @JsonProperty("user_id")
   public String getUserId() {
     return userId;
-  }
-
-  public void setAmount(BigDecimal amount) {
-    this.amount = amount;
   }
 
 
@@ -72,20 +48,19 @@ public class PaymentRequest {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    PaymentRequest paymentRequest = (PaymentRequest) o;
-    return Objects.equals(this.amount, paymentRequest.amount) && Objects.equals(this.userId, paymentRequest.userId);
+    BalanceRequest paymentRequest = (BalanceRequest) o;
+    return Objects.equals(this.userId, paymentRequest.userId);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(amount, userId);
+    return Objects.hash(userId);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
     sb.append("class PaymentRequest {\n");
-    sb.append("    amount: ").append(toIndentedString(amount)).append("\n");
     sb.append("    userId: ").append(toIndentedString(userId)).append("\n");
     sb.append("}");
     return sb.toString();
